--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html lang="en-us">
 
 <head>
-  <!-- Global Site Tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106974617-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments) };
-    gtag('js', new Date());
-    gtag('config', 'UA-106974617-1');
-  </script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-122104440-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-122104440-1');
+</script>
+
 
   <meta charset="utf-8">
 
@@ -360,7 +362,7 @@
             </div>
           </div>
 
-          <div id="team1">
+          <!--<div id="team1">
             <div class="row">
 
               <div class="col-sm-6 col-lg-4">
@@ -403,7 +405,7 @@
               </div>
 
             </div>
-          </div>
+          </div>-->
          
           <!--
           <div id="team2">
