--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
               <div class="col-sm-12 col-lg-4">
                 <figure>
                   <img class="img-headshot" src="assets/img/headshots/27798216_944390262393161_4914669744384591553_o.jpg" />
-                  <h3>ZIon Abraham</h3>
+                  <h3>Zion Abraham</h3>
                   <figcaption>Operations Director</figcaption>
                   <div class="medias">
                     <a href="mailto:zion.george.abraham@gmail.com" class="social"><i aria-hidden="true" class="fa fa-envelope"></i></a>
