--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 
               <div class="col-sm-12 col-lg-4">
                 <figure>
-                  <img class="img-headshot" src="assets/img/headshots/27798216_944390262393161_4914669744384591553_o.jpg" />
+                  <img class="img-headshot" src="assets/img/headshots/zion.png" />
                   <h3>Zion Abraham</h3>
                   <figcaption>Operations Director</figcaption>
                   <div class="medias">
