--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="row">
           <div class="col-12">
             <h3>Teen Hacks is a 100 to 200-person high school civic hackathon that will gather the innovators of tomorrow and make their ideas for a better community a reality. Teen Hacks is an organization that organizes hackathons by teens for teens says teen founder <a href="https://www.linkedin.com/in/zacharythomasabraham">Zachary Thomas Abraham</a> who is passionate about Teens in Technology.</h3><br/>
-            <h3>Teen Hacks Civic Hackathon is free for attendees. We plan to raise sponsor donations for <a href="http://www.shooting-stars-foundation.org"><img src="http://static1.squarespace.com/static/57fbb286893fc0051d3b9d52/t/58498feff7e0ab9bad9b2b37/1525367738543/?format=1500w"/></a>, a non profit that sponsors scholarship for kids in third world countries like Asia, South America.Shooting Stars foundation mobilizes school students across U.S to enable college education around the globe!<a href="http://www.shooting-stars-foundation.org/impact/">(Read More)</a></h3><br/><br/>
+            <h3>Teen Hacks Civic Hackathon is free for attendees. We plan to raise sponsor donations for <a href="http://www.shooting-stars-foundation.org"><img src="http://static1.squarespace.com/static/57fbb286893fc0051d3b9d52/t/58498feff7e0ab9bad9b2b37/1525367738543/?format=1500w"/></a>, a non profit that sponsors scholarship for kids in third world countries like Asia, South America. Shooting Stars foundation mobilizes school students across U.S to enable college education around the globe!<a href="http://www.shooting-stars-foundation.org/impact/">(Read More)</a></h3><br/><br/>
             <h3>We'll provide the food, refreshments and hacking spaces for you—the hackers—to do your magic. Just bring your ideas and your passion to hack for a better community!</h3>
           </div>
           <div class="col-12">
@@ -464,6 +464,18 @@
         </div>
       </div>
     </section>
+  
+  <section id="sponsors">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h1>CODE FOR A CAUSE - RAISE FUNDS FOR EDUCATION</h1>
+            <iframe width="956" height="537" src="https://www.youtube.com/embed/2HxryLi1Tdg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          </div>
+        </div>
+        <hr>
+        </div>
+  </section>
 
     <section id="sponsors">
       <div class="container">
