--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <p>
               <h3>If you are passionate about helping your community you've found the right place! Join your fellow teen designers, coders, students and more! This Hackathon is focused on civic tech and making community services better. We hack/build and learn together during this one day Hackathon.</h3>
             <ul>
-              <li>Contribute to the betterment of your community</li>
+              <li>Contribute to the betterment of your community.Some ideas <a href="https://cmo.smcgov.org/blog/2016-04-26/county-san-mateo-hosts-second-civic-tech-hackathon">here</a></li>
               <li>Build your own portfolio of work or work on someone else's cool project</li>
               <li>Meet new (and different!) people</li>
             </ul>
