--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           <div class="col-12 block">
             <h3>What is a hackathon?</h3>
             <p>A hackathon is a 24-hour programming marathon where your ideas come to life. Over the course of the weekend, students from all backgrounds and all skill levels collaborate in teams of up to four to build something awesome. All participants
-              must abide by the <a class="link" href="assets/pdf/mlh-code-of-conduct.pdf" target="_blank">MLH Code of Conduct</a>.</p>
+              must abide by the <a class="link" href="assets/pdf/mlh-code-of-conduct.pdf" target="_blank">Code of Conduct</a>.</p>
           </div>
         </div>
         <div class="row">
