--- a/index.html
+++ b/index.html
@@ -552,8 +552,8 @@
       </div>
     </footer>
   </div>
-  <a id="mlh-trust-badge" style="display:block;max-width:100px;min-width:60px;position:fixed;right:25px;top:0;width:10%;z-index:500;display:none;" href="https://mlh.io/seasons/na-2018/events?utm_source=na-2018&utm_medium=TrustBadge&utm_campaign=na-2018&utm_content=white"
-    target="_blank"><img src="assets/img/teenhacksshooting.svg" alt="Major League Hacking 2017 Hackathon Season" style="width:100%"></a>
+  <a id="mlh-trust-badge" style="display:block;max-width:100px;min-width:60px;position:fixed;right:25px;top:0;width:10%;z-index:500;display:none;" href="http://www.shooting-stars-foundation.org?utm_medium=TrustBadge&utm_campaign=na-2018"
+    target="_blank"><img src="assets/img/teenhacksshooting.svg" alt="Teen Hacking 2018 Hackathon" style="width:100%"></a>
 </body>
 
 </html>
