--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           <div class="col-lg-6 block">
 
             <h3>Do I have to be in high school?</h3>
-            <p>Yes, only current high school students will be able to attend. Unfortunately, we are not accepting middle school students. College students are welcome to help out as mentors!</p>
+            <p>Yes, current high school students will be able to attend. We accept middle school students which some familiarity with coding. College students are welcome to help out as mentors!</p>
           </div>
 
         </div>
