--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <hr>
         <div class="row">
           <div class="col-12">
-            <h3>Teen Hacks is a 100 to 200-person high school civic hackathon that will gather the innovators of tomorrow and make their ideas for a better community a reality. Teen Hacks is an organization that organizes hackathons by teens for teens says teen founder <a href="https://www.linkedin.com/in/zacharythomasabraham">Zachary Thomas Abraham</a> who is passionate about Teens in Technology.</h3><br/>
+            <h3>Teen Hacks is a 100 to 200-person high school civic hackathon that will gather the innovators of tomorrow and make their ideas for a better community a reality. We allow middle school students in grades 7th and 8th to register with some coding experience. Teen Hacks is an organization that organizes hackathons by teens for teens says teen founder <a href="https://www.linkedin.com/in/zacharythomasabraham">Zachary Thomas Abraham</a> who is passionate about Teens in Technology.</h3><br/>
             <h3>Teen Hacks Civic Hackathon is free for attendees. We plan to raise sponsor donations for <a href="http://www.shooting-stars-foundation.org"><img src="http://static1.squarespace.com/static/57fbb286893fc0051d3b9d52/t/58498feff7e0ab9bad9b2b37/1525367738543/?format=1500w"/></a>, a non profit that sponsors scholarship for kids in third world countries like Asia, South America. Shooting Stars foundation mobilizes school students across U.S to enable college education around the globe!<a href="http://www.shooting-stars-foundation.org/impact/">(Read More)</a></h3><br/><br/>
             <h3>We'll provide the food, refreshments and hacking spaces for you—the hackers—to do your magic. Just bring your ideas and your passion to hack for a better community!</h3>
           </div>
@@ -163,7 +163,7 @@
         <div class="row">
           <div class="col-12 block">
             <h3>What is a hackathon?</h3>
-            <p>A hackathon is a 24-hour programming marathon where your ideas come to life. Over the course of the weekend, students from all backgrounds and all skill levels collaborate in teams of up to four to build something awesome. All participants
+            <p>A hackathon is a 12-hour programming marathon where your ideas come to life. Over the course of the weekend, students from all backgrounds and all skill levels collaborate in teams of up to four to build something awesome. All participants
               must abide by the <a class="link" href="assets/pdf/mlh-code-of-conduct.pdf" target="_blank">Code of Conduct</a>.</p>
           </div>
         </div>
@@ -180,7 +180,7 @@
           <div class="col-lg-6 block">
 
             <h3>Do I have to be in high school?</h3>
-            <p>Yes, current high school students will be able to attend. We accept middle school students which some familiarity with coding. College students are welcome to help out as mentors!</p>
+            <p>Yes, current high school students will be able to attend. We accept middle school students which some familiarity with coding in grades 7th and 8th. College students are welcome to help out as mentors!</p>
           </div>
 
         </div>
@@ -543,7 +543,7 @@
           <div class="col-xs-12 col-lg-6"><a href="https://firebase.google.com/" target="_blank"><img src="assets/img/sponsors/firebase.png" class="sponsorLogo firebase"></img></a></div>
           <div class="col-xs-12 col-lg-6"><a href="https://www.cbsinteractive.com/" target="_blank"><img src="assets/img/sponsors/cbs.png" class="sponsorLogo cbs"></img></a></div>
           -->
-          <div class="col-12"><a href="http://www.shooting-stars-foundation.org/" target="_blank"><img src="http://static1.squarespace.com/static/57fbb286893fc0051d3b9d52/t/58498feff7e0ab9bad9b2b37/1532562713329/?format=1500w" class="sponsorLogo linode"></img></a></div>
+          <div class="col-12"><a href="http://www.shooting-stars-foundation.org/" target="_blank"><img src="/assets/img/sponsors/SS New logo.jpg" class="sponsorLogo linode"></img></a></div>
            
         </div>
 
