--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
         </div>
         <div class="row">
 
-          <div class="col-12"><a href="https://www.netscout.com/" target="_blank"><img src="https://www.netscout.com/themes/custom/netscout/logo.svg" class="sponsorLogo big draper"></img></a></div>
+          <div class="col-xs-12 col-lg-6"><a href="https://www.netscout.com/" target="_blank"><img src="https://www.netscout.com/themes/custom/netscout/logo.svg" class="sponsorLogo big draper"></img></a></div>
         </div>
         <div class="row">
           
@@ -523,7 +523,8 @@
           <div class="col-xs-12 col-lg-6"><a href="https://firebase.google.com/" target="_blank"><img src="assets/img/sponsors/firebase.png" class="sponsorLogo firebase"></img></a></div>
           <div class="col-xs-12 col-lg-6"><a href="https://www.cbsinteractive.com/" target="_blank"><img src="assets/img/sponsors/cbs.png" class="sponsorLogo cbs"></img></a></div>
           -->
-          <div class="col-12"><a href="https://www.internetdonkey.com/" target="_blank"><img src="assets/img/sponsors/DonkeyLogoTIE.jpg" class="sponsorLogo linode"></img></a></div>
+          <div class="col-xs-12 col-lg-6"><a href="http://www.internetdonkey.com/" target="_blank"><img src="assets/img/sponsors/DonkeyLogoTIE.jpg" class="sponsorLogo linode"></img></a></div>
+          <div class="col-xs-12 col-lg-6"><a href="https://aopsacademy.org/" target="_blank"><img src="assets/img/sponsors/Aopsacademy.png" class="sponsorLogo linode"></img></a></div>
            
         </div>
 
