--- a/index.html
+++ b/index.html
@@ -525,6 +525,8 @@
           -->
           <div class="col-xs-12 col-lg-6"><a href="http://www.internetdonkey.com/" target="_blank"><img src="assets/img/sponsors/DonkeyLogoTIE.jpg" class="sponsorLogo linode"></img></a></div>
           <div class="col-xs-12 col-lg-6"><a href="https://aopsacademy.org/" target="_blank"><img src="assets/img/sponsors/Aopsacademy.png" class="sponsorLogo linode"></img></a></div>
+          <div class="col-xs-12 col-lg-6"><a href="https://www.interviewcake.com/" target="_blank"><img src="assets/img/sponsors/interviewcake.png" class="sponsorLogo linode"></img></a></div>
+          <div class="col-xs-12 col-lg-6"><a href="https://www.codemag.com/" target="_blank"><img src="assets/img/sponsors/codemag.png" class="sponsorLogo linode"></img></a></div>
            
         </div>
 
