--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                 </tr>
                 <tr>
                   <td>11:30 AM</td>
-                  <td>Lunch; </td>
+                  <td>Lunch</td>
                 </tr>
                 <tr>
                   <td>12:00 PM</td>
@@ -301,7 +301,7 @@
                 </tr>
                 <tr>
                   <td>7:00 PM</td>
-                  <td>Hacking Ends; Submissions due!</td>
+                  <td>Hacking Ends & Submissions due!</td>
                 </tr>
                 <tr>
                   <td>7:30 PM</td>
