--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
 
   <link href="assets/css/style.css" rel="stylesheet">
   <script src="assets/js/main.js"></script>
-  <title>Teen Hacks</title>
+  <title>TeenHacks</title>
    <meta name="description" content="TeenHacks Hackathon: Coming September 2018">
    <meta name="keywords" content="Hackathon,Code,Coding,Programming">
-   <meta name="author" content="Teen Hacks">
+   <meta name="author" content="Teen
+                                Hacks">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -117,17 +118,17 @@
         <div class="row">
           <div class="col-12">
             <h3>TeenHacks is a high school civic hackathon that will gather the innovators of tomorrow and make their ideas for a better community a reality. For 12 hours, learn about new technology, talk to industry professionals, meet up with friends, and make new ones. Participate in workshops, learn from speeches, and work with mentors from companies. High school students ages 12-18 can come, regardless of experience. The event is completely free!</h3><br/>
-            <h3>TeenHacks is a high school hackathon in the Bay Area for students by students says teen founder <a href="https://www.linkedin.com/in/zacharythomasabraham">Zachary Thomas Abraham</a> who is passionate about Teens in Technology. We will have free food, swag, goodies, and more! We will have plenty of games and icebreakers to make your experience memorable.</h3><br/>
+            <h3>TeenHacks is a high school hackathon in the Bay Area for students by students says the teen founder <a href="https://www.linkedin.com/in/zacharythomasabraham">Zachary Thomas Abraham</a> who is passionate about Teens in Technology. We will have free food, swag, goodies, and more! We will have plenty of games and icebreakers to make your experience memorable.</h3><br/>
 
-            <h3>Teen Hacks Civic Hackathon has partnered with Non-profit to raise sponsor donations for <a href="http://www.shooting-stars-foundation.org"><img src="http://static1.squarespace.com/static/57fbb286893fc0051d3b9d52/t/58498feff7e0ab9bad9b2b37/1525367738543/?format=1500w"/></a>, scholarship for students in third world countries like Asia, South America. Shooting Stars foundation mobilizes school students across U.S to enable college education around the globe!<a href="http://www.shooting-stars-foundation.org/impact/">(Read More)</a></h3><br/><br/>
+            <h3>TeenHacks Civic Hackathon has partnered with Non-profit to raise sponsor donations for <a href="http://www.shooting-stars-foundation.org"><img src="http://static1.squarespace.com/static/57fbb286893fc0051d3b9d52/t/58498feff7e0ab9bad9b2b37/1525367738543/?format=1500w"/></a>, a non profit that donates the proceeds to local school districts and funds education for college students internationally. Shooting Stars foundation mobilizes school students across U.S to enable college education around the globe!<a href="http://www.shooting-stars-foundation.org/impact/">(Read More)</a></h3><br/><br/>
             <h3>We'll provide the food, refreshments and hacking spaces for you—the hackers—to do your magic. Just bring your ideas and your passion to hack for a better community!</h3>
           </div>
           <div class="col-12">
             <p>
-              <h3>If you are passionate about helping your community and leverage technology to improve the way our community, society, and government function you've found the right place! Your work will unite different walks of society and enable users to take civic responsibility into your own hands. For example, tackle issues like preventing school shooting, voter turnout or develop tools to aid grassroots campaigns.Join your fellow teen designers, coders, students and more! This Hackathon is focused on civic tech and making community services better. We hack/build and learn together during this one day Hackathon.</h3>
+              <h3>If you are passionate about helping your community and leverage technology to improve the way our community, society, and government function you've found the right place! Your work will unite different walks of society and enable users to take civic responsibility into your hands. For example, tackle issues like preventing school shooting, voter turnout or develop tools to aid grassroots campaigns. Join your fellow teen designers, coders, students and more! This Hackathon is focused on civic tech and making community services better. We hack/build and learn together during this one day Hackathon.</h3>
             <ul>
-              <li>Contribute to the betterment of your community.Some ideas <a href="https://cmo.smcgov.org/blog/2016-04-26/county-san-mateo-hosts-second-civic-tech-hackathon">here</a></li>
-              <li>Build your own portfolio of work or work on someone else's cool project</li>
+              <li>Contribute to the betterment of your community. Some ideas <a href="https://cmo.smcgov.org/blog/2016-04-26/county-san-mateo-hosts-second-civic-tech-hackathon">here</a></li>
+              <li>Build your portfolio of work or work on someone else's cool project</li>
               <li>Meet new (and different!) people</li>
             </ul>
             </p>
@@ -189,7 +190,7 @@
           <div class="col-lg-6 block">
 
             <h3>What if I don't know how to code?</h3>
-            <p>No worries! Teen Hacks is the perfect time to learn how to code and all students, regardless of skill level and experience, are welcome. There will be plenty of mentors on hand glad to answer any and all questions and workshops specifically
+            <p>No worries! TeenHacks is the perfect time to learn how to code and all students, regardless of skill level and experience, are welcome. There will be plenty of mentors on hand glad to answer any and all questions and workshops specifically
               designed for those with no prior experience. Stay tuned for more information about workshops!</p>
 
           </div>
@@ -249,13 +250,13 @@
           <div class="col-lg-6 block">
 
             <h3>What if I have another question?</h3>
-            <p>Email us at <a class="link" href="mailto:teentechhacks@gmail.com">Teen Hacks</a> if you have any additional questions. We are always happy to help!</p>
+            <p>Email us at <a class="link" href="mailto:teentechhacks@gmail.com">TeenHacks</a> if you have any additional questions. We are always happy to help!</p>
           </div>
 
           <div class="col-lg-6 block">
 
             <h3>What if I want to sponsor?</h3>
-            <p>Email us at <a class="link" href="mailto:teentechhacks@gmail.com">Teen Hacks</a>, we always are looking!</p>
+            <p>Email us at <a class="link" href="mailto:teentechhacks@gmail.com">TeenHacks</a>, we always are looking!</p>
 
           </div>
         </div>
@@ -341,7 +342,7 @@
                 <figure>
                   <img class="img-headshot" src="assets/img/headshots/27867576_946139768884615_3169872072146449170_n.jpg" />
                   <h3>Zachary Abraham</h3>
-                  <figcaption>Founder & Executive Director Teen Hacks</figcaption>
+                  <figcaption>Founder & Executive Director TeenHacks</figcaption>
                   <div class="medias">
                     <a href="mailto:zachary.thomas.abraham@gmail.com" class="social"><i aria-hidden="true" class="fa fa-envelope"></i></a>
                     <a href="https://www.linkedin.com/in/zacharythomasabraham" class="social" target="_blank"><i aria-hidden="true" class="fa fa-linkedin-square"></i></a>
@@ -624,19 +625,19 @@
             </center>
             <br/>
             <center>
-               <div class="copyright"> &copy; Teen Hacks</div>
+               <div class="copyright"> &copy; TeenHacks</div>
             </center>
             <br>
          </div>
       </section>
     <footer class="footer">
       <div class="container">
-        <p>© Teen Hacks 2018</p>
+        <p>© TeenHacks 2018</p>
       </div>
     </footer>
   </div>
   <a id="mlh-trust-badge" style="display:block;max-width:100px;min-width:60px;position:fixed;right:25px;top:0;width:10%;z-index:500;display:none;" href="http://www.shooting-stars-foundation.org?utm_medium=TrustBadge&utm_campaign=na-2018"
-    target="_blank"><img src="assets/img/teenhacksshooting.svg" alt="Teen Hacking 2018 Hackathon" style="width:100%"></a>
+    target="_blank"><img src="assets/img/teenhacksshooting.svg" alt="TeenHacking 2018 Hackathon" style="width:100%"></a>
 </body>
 
 </html>
