--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <p>
               <h3>If you are passionate about helping your community and leverage technology to improve the way our community, society, and government function you've found the right place! Your work will unite different walks of society and enable users to take civic responsibility into your hands. For example, tackle issues like preventing school shooting, voter turnout or develop tools to aid grassroots campaigns. Join your fellow teen designers, coders, students and more! This Hackathon is focused on civic tech and making community services better. We hack/build and learn together during this one day Hackathon.</h3>
             <ul>
-              <li>Contribute to the betterment of your community. Some ideas <a href="https://cmo.smcgov.org/blog/2016-04-26/county-san-mateo-hosts-second-civic-tech-hackathon">here</a></li>
+              <li>Contribute to the betterment of your community. Some ideas <a href="http://hack-smc.org/app-ideas/">here</a></li>
               <li>Build your portfolio of work or work on someone else's cool project</li>
               <li>Meet new (and different!) people</li>
             </ul>
