--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <link href="assets/css/style.css" rel="stylesheet">
   <script src="assets/js/main.js"></script>
   <title>TeenHacks</title>
-   <meta name="description" content="TeenHacks Hackathon: Coming September 2018">
+   <meta name="description" content="TeenHacks Hackathon: September 8 2018">
    <meta name="keywords" content="Hackathon,Code,Coding,Programming">
    <meta name="author" content="Teen
                                 Hacks">
@@ -80,9 +80,9 @@
     <!--<img src="assets/img/teenhackslogo.svg" width="1400px" id="logo"></img>-->
     <section id="cover">
       <div class="container-fluid">
+        <div> HIGH SCHOOL HACKATHON</div>
         <div class="row">
           <img src="assets/img/teenhackslogo.svg" id="logo"></img>
-        </div>
         <div id="date">
           <h1>CIVIC HACKATHON</h1>
           <h2>September - 8th, 2018</h2>
