--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
       <div class="container-fluid">
         <div class="row">
           <img src="assets/img/teenhackslogo.svg" id="logo"></img>
+        </div>
         <div id="date">
           <h1>CIVIC HACKATHON</h1>
           <h2>September - 8th, 2018</h2>
