--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
 
               <div class="col-sm-12 col-lg-4">
                 <figure>
-                  <img class="img-headshot" src="assets/img/headshots/adam.png" />
+                  <img class="img-headshot" src="assets/img/headshots/6A582E06-0492-420B-8DE5-55221A3BF8EA.jpeg" />
                   <h3>Adam Oushreovich</h3>
                   <figcaption>Outreach Team</figcaption>
                   <div class="medias">
