--- a/index.html
+++ b/index.html
@@ -388,8 +388,6 @@
                   <figcaption>Operations Team</figcaption>
                   <div class="medias">
                     <a href="mailto:teenhacks@gmail.com" class="social"><i aria-hidden="true" class="fa fa-envelope"></i></a>
-                    <a href="https://www.linkedin.com/in/zacharythomasabraham" class="social" target="_blank"><i aria-hidden="true" class="fa fa-linkedin-square"></i></a>
-                    <a href="https://www.facebook.com/zacharythomasabraham" class="social" target="_blank"><i aria-hidden="true" class="fa fa-facebook-square"></i></a>
                   </div>
                 </figure>
               </div>
@@ -401,7 +399,6 @@
                   <figcaption>Outreach Team</figcaption>
                   <div class="medias">
                     <a href="mailto:teenhacks@gmail.com" class="social"><i aria-hidden="true" class="fa fa-envelope"></i></a>
-                    <a href="https://www.linkedin.com/in/ziongeorgeabraham/" class="social" target="_blank"><i aria-hidden="true" class="fa fa-linkedin-square"></i></a>
                   </div>
                 </figure>
               </div>
@@ -409,12 +406,10 @@
               <div class="col-sm-12 col-lg-4">
                 <figure>
                   <img class="img-headshot" src="assets/img/headshots/pranav.png" />
-                  <h3>Pranav V</h3>
+                  <h3>Pranav Zalpuri</h3>
                   <figcaption>Sponsorship Team</figcaption>
                   <div class="medias">
-                    <a href="mailto:zayne.john.abraham@gmail.com" class="social"><i aria-hidden="true" class="fa fa-envelope"></i></a>
-                    <a href="https://www.linkedin.com/in/zaynejohnabraham/" class="social" target="_blank"><i aria-hidden="true" class="fa fa-linkedin-square"></i></a>
-                    <a href="https://www.facebook.com/zaynejohnabraham" class="social" target="_blank"><i aria-hidden="true" class="fa fa-facebook-square"></i></a>
+                    <a href="mailto:teenhacks@gmail.com" class="social"><i aria-hidden="true" class="fa fa-envelope"></i></a>
                   </div>
                 </figure>
               </div>
