--- a/index.html
+++ b/index.html
@@ -256,14 +256,14 @@
           <div class="col-lg-6 block">
 
             <h3>How can I apply?</h3>
-            <p>The window for hackers to register has been extended, <a href="#register" class="link">click here</a> to apply!</p>
-            <!--<p>Unfortunately, the window for hackers to apply has closed. But, if you are registering to be a mentor, judge, or volunteer, <a href="#register" class="link">click here!</a></p>-->
+            <p><a href="#register" class="link">click here</a> to apply!</p>
+       
           </div>
 
           <div class="col-lg-6 block">
 
             <h3>What is the schedule like?</h3>
-            <p>The event September 8,2018 and the day-of schedule is posted below!</p>
+            <p>The event is from 9am to 9pm on September 8,2018. The day-of schedule is posted below!</p>
           </div>
         </div>
         <div class="row">
