--- a/index.html
+++ b/index.html
@@ -53,25 +53,25 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-    <div class="collapse navbar-collapse" style="color:yellow" id="navbarNav">
+    <div class="collapse navbar-collapse" style="color: rgba(255,255,0,0,3);" id="navbarNav">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="#about">About</a>
+          <a class="nav-link" style="color: rgba(255,255,0,0,3);" href="#about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#register">Register</a>
+          <a class="nav-link" style="color: rgba(255,255,0,0,3);" href="#register">Register</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#faq">FAQ</a>
+          <a class="nav-link" style="color: rgba(255,255,0,0,3);" href="#faq">FAQ</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#schedule">Schedule</a>
+          <a class="nav-link" style="color: rgba(255,255,0,0,3);" href="#schedule">Schedule</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#organizers">Organizers</a>
+          <a class="nav-link" style="color: rgba(255,255,0,0,3);" href="#organizers">Organizers</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#sponsors">Sponsors</a>
+          <a class="nav-link" style="color: rgba(255,255,0,0,3);" href="#sponsors">Sponsors</a>
         </li>
       </ul>
     </div>
