--- a/index.html
+++ b/index.html
@@ -53,38 +53,39 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-    <div class="collapse navbar-collapse" style="color: rgba(255,255,0,0,3);" id="navbarNav">
+    <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" style="color: rgba(255,255,0,0,3);" href="#about">About</a>
+          <a class="nav-link" href="#about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" style="color: rgba(255,255,0,0,3);" href="#register">Register</a>
+          <a class="nav-link" href="#register">Register</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" style="color: rgba(255,255,0,0,3);" href="#faq">FAQ</a>
+          <a class="nav-link"  href="#faq">FAQ</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" style="color: rgba(255,255,0,0,3);" href="#schedule">Schedule</a>
+          <a class="nav-link" href="#schedule">Schedule</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" style="color: rgba(255,255,0,0,3);" href="#organizers">Organizers</a>
+          <a class="nav-link" href="#organizers">Organizers</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" style="color: rgba(255,255,0,0,3);" href="#sponsors">Sponsors</a>
+          <a class="nav-link" href="#sponsors">Sponsors</a>
         </li>
       </ul>
     </div>
   </nav>
   <div id="mainContent">
-    <!--<img src="assets/img/teenhackslogo.svg" width="1400px" id="logo"></img>-->
+    <img src="assets/img/teenhacks-shooting-netscouts-bg" width="1400px" id="logo"></img>
     <section id="cover">
       <div class="container-fluid">
         <div class="row">
-          <img src="assets/img/teenhackslogo.svg" id="logo"></img>
+          <img src="assets/img/teenhackslogo-best.png" id="logo"></img>
         </div>
         <div id="date">
-          <h1>CIVIC HACKATHON</h1>
+          <h1>TEENHACKS</h1>
+          <h2>CIVIC HACKATHON</h2>
           <h2>September - 8th, 2018</h2>
           <h3>NetScout Systems Inc.</h3>
           <p>178 E Tasman Dr, San Jose, CA 95134</p>
