--- a/index.html
+++ b/index.html
@@ -77,14 +77,16 @@
     </div>
   </nav>
   <div id="mainContent">
-    <img src="assets/img/teenhacks-shooting-netscouts-bg" width="1400px" id="logo"></img>
+     <section id="banner">
+     <img src="assets/img/teenhacks-shooting-netscouts-bg.png" height="100" width="1400px" id="logo"></img>
+  </section>
     <section id="cover">
       <div class="container-fluid">
         <div class="row">
           <img src="assets/img/teenhackslogo-best.png" id="logo"></img>
         </div>
         <div id="date">
-          <h1>TEENHACKS</h1>
+          <h1>TEEN HACKS</h1>
           <h2>CIVIC HACKATHON</h2>
           <h2>September - 8th, 2018</h2>
           <h3>NetScout Systems Inc.</h3>
@@ -92,6 +94,10 @@
         </div>
       </div>
     </section>
+  <section id="banner">
+     <img src="assets/img/teenhacks-shooting-netscouts-bg.png" height="100" width="1400px" id="logo"></img>
+  </section>
+   
   <section id="prizes">
       <div class="container">
         <div class="row">
