--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     </div>
   </div>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-custom">
-    <a class="navbar-brand" href="#"><i>TeenHacks</i></a>
+  <nav class="navbar navbar-expand-lg navbar-light bg-custom"><span class="corner-ribbon top-left sticky red shadow">High School</span>
+    <a class="navbar-brand" href="#"><i style="padding-left:3em;">TeenHacks</i></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
