--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
       </div>
     </section>
   
-  <section id="sponsors">
+  <section id="parter-video">
       <div class="container">
         <div class="row">
           <div class="col-12">
