--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
       </div>
     </section>
   <section id="banner">
-     <img src="assets/img/teenhacks-shooting-netscouts-bg.png" height="100" width="1400px" id="logo"></img><br/>
+     <img src="assets/img/teenhacks-shooting-netscouts-bg.png" height="100" width="1400px" id="logo"></img>
+     <div class="clear"></div>
   </section>
    
   <section id="prizes">
