--- a/index.html
+++ b/index.html
@@ -632,8 +632,11 @@
         <hr>
         
         <div class = "row" style = "padding-bottom: 20px">
+           <div class = "col-lg-12">
+              Thank you to all of our sponsors! Without your help, TeenHacks wouldn't be possible.
+           </div>
             <div class = "col-lg-12" style = "text-align: center !important">
-               <a href="assets/pdf/sponsorshippacket.pdf" class="btn btn-default btn-lg"><i class="fa fa-eye fa-fw"></i> <span class="network-name">Sponsorship Package</span></a>
+              <a href="assets/pdf/sponsorshippacket.pdf" class="btn btn-default btn-lg"><i class="fa fa-eye fa-fw"></i> <span class="network-name">INTERESTED IN SPONSORING? CLICK HERE!</span></a>
             </div>
        </div>
         <div class="row">
