--- a/index.html
+++ b/index.html
@@ -639,9 +639,15 @@
               <a href="assets/pdf/sponsorshippacket.pdf" class="btn btn-default btn-lg"><i class="fa fa-eye fa-fw"></i> <span class="network-name">INTERESTED IN SPONSORING? CLICK HERE!</span></a>
             </div>
        </div>
+        <div class="h6 black">DIAMOND</div>
         <div class="row">
 
           <div class="col-xs-12 col-lg-6"><a href="https://www.netscout.com/" target="_blank"><img src="https://www.netscout.com/themes/custom/netscout/logo.svg" class="sponsorLogo big draper"></img></a></div>
+           
+        </div>
+        <div class="h6 black">OTHER</div>
+        <div class="row">
+
           <div class="col-xs-12 col-lg-6"><a href="https://www.wolfram.com/language/" target="_blank"><img src="assets/img/sponsors/wolfram.png" class="sponsorLogo wolfram"></img></a></div>
           <div class="col-xs-12 col-lg-6"><a href="https://www.jetbrains.com/" target="_blank"><img src="assets/img/sponsors/jetbrains.png" class="sponsorLogo jetBrains"></img></a></div>
           <div class="col-xs-12 col-lg-6"><a href="http://www.internetdonkey.com/" target="_blank"><img src="assets/img/sponsors/DonkeyLogoTIE.jpg" class="sponsorLogo"></img></a></div>
