--- a/index.html
+++ b/index.html
@@ -635,6 +635,7 @@
            <div class = "col-lg-12" style="color:black">
               Thank you to all of our sponsors! Without your help, TeenHacks wouldn't be possible.
            </div>
+          <div class="clear"></div>
             <div class = "col-lg-12" style = "text-align: center !important">
               <a href="assets/pdf/sponsorshippacket.pdf" class="btn btn-default btn-lg"><i class="fa fa-eye fa-fw"></i> <span class="network-name">INTERESTED IN SPONSORING? CLICK HERE!</span></a>
             </div>
