--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-122104440-1');
+  gtag('config', 'UA-122104440-1'
 </script>
 
 
@@ -625,7 +625,7 @@
               
               <div class="col-sm-12 col-lg-4">
                 <figure>
-                  <img class="img-headshot" src="assets/img/headshots/zayne.png" />
+                  <img class="img-headshot" src="assets/img/headshots/speakersjudges/namrata.jpeg" />
                   <h3>Namrata Mujumdar</h3>
                   <figcaption>Founder & CEO, Amp Politics</figcaption>
                 </figure>
@@ -633,7 +633,7 @@
               
               <div class="col-sm-12 col-lg-4">
                 <figure>
-                  <img class="img-headshot" src="assets/img/headshots/zayne.png" />
+                  <img class="img-headshot" src="assets/img/headshots/speakersjudges/michellesun.jpeg" />
                   <h3>Michelle Sun</h3>
                   <figcaption>Founder & CEO at First Code Academy</figcaption>
                 </figure>
@@ -641,7 +641,7 @@
 
               <div class="col-sm-12 col-lg-4">
                 <figure>
-                  <img class="img-headshot" src="assets/img/headshots/zayne.png" />
+                  <img class="img-headshot" src="assets/img/headshots/speakersjudges/naveen.jpeg" />
                   <h3>Naveen Kulandaivelu</h3>
                   <figcaption>CTO,Step.ai</figcaption>
                 </figure>
@@ -649,7 +649,7 @@
 
               <div class="col-sm-12 col-lg-4">
                 <figure>
-                  <img class="img-headshot" src="assets/img/headshots/dimple.png" />
+                  <img class="img-headshot" src="assets/img/headshots/speakersjudges/dimple.png" />
                   <h3>Dimple Joseph</h3>
                   <figcaption>Engineering Manager, PlayStation</figcaption>
                 </figure>
@@ -657,7 +657,7 @@
 
               <div class="col-sm-12 col-lg-4">
                 <figure>
-                  <img class="img-headshot" src="assets/img/headshots/manoj.png" />
+                  <img class="img-headshot" src="assets/img/headshots/speakersjudges/manoj.jpg" />
                   <h3>Manoj Abraham</h3>
                   <figcaption>CTO, InternetDonkey,Inc</figcaption>
                 </figure>
