--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
   <title>TeenHacks</title>
    <meta name="description" content="TeenHacks Hackathon: September 8 2018">
    <meta name="keywords" content="Hackathon,Code,Coding,Programming">
-   <meta name="author" content="Teen
-                                Hacks">
+   <meta name="author" content="TeenHacks">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
