--- a/index.html
+++ b/index.html
@@ -501,8 +501,15 @@
                   </div>
                 </figure>
               </div>
-
-
+                <div class = "row" style = "padding-bottom: 20px">
+                   <div class = "col-lg-12" style="color:black">
+                      Thank you to all of our volunteers! Without your help, TeenHacks wouldn't be possible.
+                   </div>
+                  <div class="clear"></div>
+                    <div class = "col-lg-12" style = "text-align: center !important">
+                      <a href="http://bit.ly/volunteer_th18" class="btn btn-default btn-lg"><i class="fa fa-eye fa-fw"></i> <span class="network-name">INTERESTED IN JOINING US? CLICK HERE!</span></a>
+                    </div>
+                  </div>
             </div>
           </div>
 
