--- a/index.html
+++ b/index.html
@@ -153,7 +153,8 @@
             </ul>
             <h4>We also have special prizes for using a specific software tool.</h4>
             <h4>Special Prize</h4>
-            <ul><li>The Best Civic Project on .tech site</li>
+            <ul><li>Internet Donkey Jungle in the humble Best Pitch award</li>
+		    <li>The Best Civic Project on .tech site</li>
           <li>The Best Civic Project using Unity3d</li>
               <li>The best Civic project using Hasura GraphQL Engine</li></ul>
        </div>
