--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
      
     <section id="cover">
       <div class="container-fluid">
+	      
         <div class="row">
           <img src="assets/img/teenhackslogo-best.png" id="logo"></img>
         </div>
@@ -424,20 +425,23 @@
                   <td>Attendee Check-In</td>
                 </tr>
                 <tr>
-                  <td>9:30 AM</td>
+                  <td>9:15 AM</td>
                   <td>Opening Ceremony</td>
                 </tr>
                 <tr>
                   <td>10:00 AM</td>
-                  <td>Hacking Begins!</td>
+                  <td><p>Brainstorming Ideas; Hacking Begins! </p>
+	           <p>Workshop- Brainstorming project ideas 10:00 -11:00 pm</p>
+                   <p>Workshop- Python and Machine learning  - 11:00 - 12:30 am./<p>
+		   </td>
                 </tr>
                 <tr>
-                  <td>11:30 AM</td>
+                  <td>12:00 AM</td>
                   <td>Lunch</td>
                 </tr>
                 <tr>
-                  <td>12:00 PM</td>
-                  <td>Workshops Begin</td>
+                  <td>2:00 PM</td>
+                  <td>Workshop - technology-based entrepreneurship.</td>
                 </tr>
                 <tr>
                   <td>7:00 PM</td>
