--- a/index.html
+++ b/index.html
@@ -430,9 +430,13 @@
                 </tr>
                 <tr>
                   <td>10:00 AM</td>
-                  <td><p>Brainstorming Ideas; Hacking Begins! </p>
-	           <p>Workshop- Brainstorming project ideas 10:00 - 11:00 pm </p>
-                   <p>Workshop- Python and Machine learning  - 11:00 - 12:30 am </p>
+                  <td><p>Brainstorming Ideas; Hacking Begins! </p> </td>
+                </tr>
+		<tr>
+                  <td>10:00 AM</td>
+                  <td><p> Workshop Begins! </p>
+	           <p> Workshop - Brainstorming project ideas 10:00 - 11:00 pm </p>
+                   <p> Workshop - Python and Machine learning  - 11:00 - 12:30 am </p>
 		   </td>
                 </tr>
                 <tr>
@@ -441,7 +445,7 @@
                 </tr>
                 <tr>
                   <td>2:00 PM</td>
-                  <td>Workshop - technology-based entrepreneurship.</td>
+                  <td> Workshop - technology-based entrepreneurship.</td>
                 </tr>
                 <tr>
                   <td>7:00 PM</td>
