--- a/index.html
+++ b/index.html
@@ -78,7 +78,12 @@
   <div id="mainContent">
      
     <section id="cover">
+    <div class="row">
       <div class="container-fluid">
+	<div class="col-lg-12" style="text-align: center !important">
+              <a href="https://form.jotform.com/80678994784178" class="btn btn-default btn-lg"><i class="fa fa-eye fa-fw" aria-hidden="true"></i> <span class="network-name">HACK FOR GOOD? DONATE FOR EDUCATION? CLICK HERE!</span></a>
+        </div>
+      </div>
 	      
         <div class="row">
           <img src="assets/img/teenhackslogo-best.png" id="logo"></img>
