--- a/index.html
+++ b/index.html
@@ -457,8 +457,8 @@
                   <td>Hacking Ends & Submissions due!</td>
                 </tr>
                 <tr>
-                  <td>7:30 PM</td>
-                  <td>Judging</td>
+                  <td>7:o0 PM</td>
+                  <td>Judging & Presnetations</td>
                 </tr>
                 <tr>
                   <td>8:30 PM</td>
