--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
                 </tr>
                 <tr>
                   <td>8:30 PM</td>
-                  <td>Closing Ceremony</td>
+                  <td>Awards & Closing Ceremony</td>
                 </tr>
                 <tr>
                   <td>9:00 PM</td>
