--- a/index.html
+++ b/index.html
@@ -153,9 +153,10 @@
         <div class="row">
           <div class="col-12">
             <h4>Prizes will be awarded to Best Hack for the theme</h4>
-            <ul><li>The Best Hack for the city</li>
-           <li>The Best Hack for the environment</li>
-           <li>The Best Hack for the Health</li>
+            <ul><li>The Best Overall Hack - I</li>
+           <li>The Best Overall Hack - II</li>
+           <li>The Best Overall Hack - III</li>
+           <li>The Best Overall Hack - IV</li>
             </ul>
             <h4>We also have special prizes for using a specific software tool.</h4>
             <h4>Special Prize</h4>
