--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         </div>
         <div class="row">
           <div class="col-12">
-            <h4>Prizes will be awarded to Best Hack for the theme</h4>
+            <h4>Prizes will be awarded to the best Civic Hack</h4>
             <ul><li>The Best Overall Hack - I</li>
            <li>The Best Overall Hack - II</li>
            <li>The Best Overall Hack - III</li>
@@ -163,7 +163,7 @@
             <ul><li>Internet Donkey Jungle in the humble Best Pitch award</li>
 		    <li>The Best Civic Project on .tech site</li>
           <li>The Best Civic Project using Unity3d</li>
-              <li>The best Civic project using Hasura GraphQL Engine</li></ul>
+              <li>The Best Civic project using Hasura GraphQL Engine</li></ul>
        </div>
         </div>
     </div>
