--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
 		    
               <div class="col-sm-12 col-lg-4">
                 <figure>
-                  <img class="img-headshot" src="assets/img/headshots/speakersjudges/gordonbeith.png" />
+                  <img class="img-headshot" src="assets/img/headshots/speakersjudges/gordonbeith.jpg" />
                   <h3>Gordon Beith</h3>
                   <figcaption>Director Product Management,Netscout Systems,Inc</figcaption>
                 </figure>
@@ -701,9 +701,11 @@
           <div class="col-xs-12 col-lg-6"><a href="https://balsamiq.com/" target="_blank"><img src="assets/img/sponsors/balsamiq.png" class="sponsorLogo"></img></a></div>
           <div class="col-xs-12 col-lg-6"><a href="http://www.internetdonkey.com/" target="_blank"><img src="assets/img/sponsors/DonkeyLogoTIE.jpg" class="sponsorLogo"></img></a></div>
            <div class="col-xs-12 col-lg-6"><a href="https://www.domain.com/" target="_blank"><img src="assets/img/sponsors/tech.jpg" class="sponsorLogo"></img></a></div>
-           <div class="col-xs-12 col-lg-6"><a href="https://www.wolfram.com/language/" target="_blank"><img src="assets/img/sponsors/wolfram.png" class="sponsorLogo wolfram"></img></a></div>
-       </div>
+           <div class="col-xs-12 col-lg-6"><a href="https://www.adeept.com/language/" target="_blank"><img src="assets/img/sponsors/adeept.png" class="sponsorLogo adeept"></img></a></div>
+  
+        </div>
         <div class="row">
+	 <div class="col-xs-12 col-lg-6"><a href="https://www.wolfram.com/language/" target="_blank"><img src="assets/img/sponsors/wolfram.png" class="sponsorLogo wolfram"></img></a></div>
           <div class="col-xs-12 col-lg-6"><a href="https://www.hasura.com/" target="_blank"><img src="assets/img/sponsors/hasura.png" class="sponsorLogo hasura"></img></a></div>
           <div class="col-xs-12 col-lg-6"><a href="https://www.unity3d.com/" target="_blank"><img src="assets/img/sponsors/unity3d.png" class="sponsorLogo unity"></img></a></div>
           <div class="col-xs-12 col-lg-6"><a href="https://www.jetbrains.com/" target="_blank"><img src="assets/img/sponsors/jetbrains.png" class="sponsorLogo jetBrains"></img></a></div>
