--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
 
               <div class="col-sm-12 col-lg-4">
                 <figure>
-                  <img class="img-headshot" src="assets/img/headshots/speakersjudges/manoj.jpg" />
+                  <img class="img-headshot" src="assets/img/headshots/speakersjudges/manoj.jpeg" />
                   <h3>Manoj Abraham</h3>
                   <figcaption>CTO, InternetDonkey,Inc</figcaption>
                 </figure>
