--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
         <div class="row">
           <div class="col-xs-12 col-lg-6"><a href="http://brilliantmindsacademy.com/" target="_blank"><img src="assets/img/sponsors/brilliantminds.png" class="sponsorLogo"></img></a></div>
           <div class="col-xs-12 col-lg-6"><a href="https://balsamiq.com/" target="_blank"><img src="assets/img/sponsors/balsamiq.png" class="sponsorLogo"></img></a></div>
-          <div class="col-xs-12 col-lg-6"><a href="http://www.internetdonkey.com/" target="_blank"><img src="assets/img/sponsors/DonkeyLogoTIE.jpg" class="sponsorLogo"></img></a></div>
+          <div class="col-xs-12 col-lg-6"><a href="http://www.internetdonkey.com/" target="_blank"><img src="assets/img/sponsors/internetdonkeydownload.jpeg" class="sponsorLogo"></img></a></div>
            <div class="col-xs-12 col-lg-6"><a href="https://www.domain.com/" target="_blank"><img src="assets/img/sponsors/tech.jpg" class="sponsorLogo"></img></a></div>
            <div class="col-xs-12 col-lg-6"><a href="https://www.adeept.com/language/" target="_blank"><img src="assets/img/sponsors/adeept.png" class="sponsorLogo adeept"></img></a></div>
   
@@ -751,7 +751,7 @@
           <div class="col-xs-12 col-lg-6"><a href="http://www.shooting-stars-foundation.org/" target="_blank"><img src="/assets/img/sponsors/SS New logo.jpg" class="sponsorLogo linode"></img></a></div>
           <div class="col-xs-12 col-lg-6"<a href="https://leangap.org/" target="_blank"><img src="/assets/img/sponsors/leangap.png" class="sponsorLogo linode"></img></a></div>
           <div class="col-xs-12 col-lg-6"><a href="https://www.hackerearth.com/" target="_blank"><img src="/assets/img/sponsors/hackerearth.png" class="sponsorLogo linode"></img></a></div>
-          <div class="col-xs-12 col-lg-6"><a href="https://itunes.apple.com/us/app/don-key-ko-are-you-smarter-than-a-gorilla/id1165845280?mt=8" target="_blank"><img src="assets/img/sponsors/donkeyko.jpg" class="sponsorLogo"></img></a></div>
+          <div class="col-xs-12 col-lg-6"><a href="https://itunes.apple.com/us/app/don-key-ko-are-you-smarter-than-a-gorilla/id1165845280?mt=8" target="_blank"><img src="assets/img/sponsors/donkeykodownload.jpeg" class="sponsorLogo"></img></a></div>
           
         </div>
 
