--- a/index.html
+++ b/index.html
@@ -687,21 +687,21 @@
         <hr>
         
         <div class = "row" style = "padding-bottom: 20px">
-           <div class = "col-lg-12" style="color:black">
-              Thank you to all of our sponsors! Without your help, TeenHacks wouldn't be possible.
+           <div class = "col-lg-12" style="color:white">
+              <h4>Thank you to all of our sponsors! Without your help, TeenHacks wouldn't be possible</h4>
            </div>
           <div class="clear"></div>
             <div class = "col-lg-12" style = "text-align: center !important">
               <a href="assets/pdf/sponsorshippacket.pdf" class="btn btn-default btn-lg"><i class="fa fa-eye fa-fw"></i> <span class="network-name">INTERESTED IN SPONSORING? CLICK HERE!</span></a>
             </div>
        </div>
-        <div class="h6 black" style="color:black">DIAMOND</div>
+        <div class="h6 black" style="color:white"><h4>DIAMOND</h4</div>
         <div class="row">
 
           <div class="col-xs-12 col-lg-6"><a href="https://www.netscout.com/" target="_blank"><img src="https://www.netscout.com/themes/custom/netscout/logo.svg" class="sponsorLogo big draper"></img></a></div>
            
         </div>
-        <div class="h6 black" style="color:black">OTHER</div>
+	    <div class="h6 black" style="color:white"><h4>OTHER</h4></div>
         <div class="row">
           <div class="col-xs-12 col-lg-6"><a href="http://brilliantmindsacademy.com/" target="_blank"><img src="assets/img/sponsors/brilliantminds.png" class="sponsorLogo"></img></a></div>
           <div class="col-xs-12 col-lg-6"><a href="https://balsamiq.com/" target="_blank"><img src="assets/img/sponsors/balsamiq.png" class="sponsorLogo"></img></a></div>
