--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
           <div class="col-xs-12 col-lg-6"><a href="https://balsamiq.com/" target="_blank"><img src="assets/img/sponsors/balsamiq.png" class="sponsorLogo"></img></a></div>
           <div class="col-xs-12 col-lg-6"><a href="http://www.internetdonkey.com/" target="_blank"><img src="assets/img/sponsors/internetdonkeydownload.jpeg" class="sponsorLogo"></img></a></div>
            <div class="col-xs-12 col-lg-6"><a href="https://www.domain.com/" target="_blank"><img src="assets/img/sponsors/tech.jpg" class="sponsorLogo"></img></a></div>
-           <div class="col-xs-12 col-lg-6"><a href="https://www.adeept.com/language/" target="_blank"><img src="assets/img/sponsors/adeept.png" class="sponsorLogo adeept"></img></a></div>
+           <div class="col-xs-12 col-lg-6"><a href="http://www.adeept.com" target="_blank"><img src="assets/img/sponsors/adeept.png" class="sponsorLogo adeept"></img></a></div>
   
         </div>
         <div class="row">
