--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         </div>
         <div class="row">
           <div class="col-xs-12 col-sm-6 col-lg-3">
-            <h2><a href="http://bit.ly/attendees_th18" class="link" target="_blank">Attendee</a></h2>
+            <h2><a class="sold_out" href="http://bit.ly/attendees_th18" class="link" target="_blank">Attendee</a></h2>
           </div>
           <div class="col-xs-12 col-sm-6 col-lg-3">
             <h2><a href="http://bit.ly/mentor_th18" class="link" target="_blank">Mentor</a></h2>
