--- a/index.html
+++ b/index.html
@@ -658,6 +658,13 @@
                   <figcaption>CTO, InternetDonkey,Inc</figcaption>
                 </figure>
               </div>
+	      <div class="col-sm-12 col-lg-4">
+                <figure>
+                  <img class="img-headshot" src="assets/img/headshots/speakersjudges/latha.jpg" />
+                  <h3>Latha Narayanan</h3>
+                  <figcaption>AVP, NetScout Systems & CEO, Shooting Stars FoundationShooting Stars Foundation,Inc</figcaption>
+                </figure>
+              </div>
 
 
             </div>
